--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>Goooood</title>
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/img/favicon.ico"/>
+    <link rel="bookmark" href="/static/img/favicon.ico"/>
     <link rel="stylesheet" href="/static/css/vmaig.css">
     <link rel="stylesheet" href="/static/css/vmaig_comments.css">
     <link rel="stylesheet" href="/static/css/vmaig_auth.css">
