--- a/blog/templates/blog/include/home_post.html
+++ b/blog/templates/blog/include/home_post.html
@@ -58,7 +58,7 @@
                     ...
                 {% endif %}
                 </p>
-                <a type="button" class="btn btn-vmaig pull-right hidden-xs"  href="/article/{{post.en_title}}.html">阅读全文</a>
+                <a type="button" class=" readmore"  href="/article/{{post.en_title}}.html">Continue reading &raquo;</a>
 
             </div>
         </div>
