--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <!--手机html -->
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-    <title>Goooood</title>
+    <title>G5od</title>
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/static/img/favicon.ico"/>
-    <link rel="bookmark" href="/static/img/favicon.ico"/>
+    <link rel="shortcut icon" href="/static/img/5.ico"/>
+    <link rel="bookmark" href="/static/img/5.ico"/>
     <link rel="stylesheet" href="/static/css/vmaig.css">
     <link rel="stylesheet" href="/static/css/vmaig_comments.css">
     <link rel="stylesheet" href="/static/css/vmaig_auth.css">
@@ -31,7 +31,7 @@
         </div>
         <footer>
            <div class="container">
-               <p class="text-center">基于Dajngo1.8,Bootsratp3</p>
+               <p class="text-center">基于Dajngo1.8,Bootsratp3,nginx,uwsgi,mysql</p>
            </div>
         </footer>
     </div>
