--- a/blog/templates/blog/include/nav.html
+++ b/blog/templates/blog/include/nav.html
@@ -8,20 +8,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div class="navbar-brand">Goooood</div>
+            <div class="navbar-brand">G5od</div>
         </div>
         <div class="collapse navbar-collapse" id="vmaig-navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="">
                 <a href="/">
                     <span class="glyphicon glyphicon-home"></span>
-                    首页
+                    Home
                 </a>
                 </li>
                 <li>
                 <a href="/all">
                     <span class="glyphicon glyphicon-globe"></span>
-                    全部文章
+                    All Article
                 </a>
                 </li>
 <!--                 <li>
