--- a/blog/templates/blog/include/tag_post.html
+++ b/blog/templates/blog/include/tag_post.html
@@ -15,13 +15,20 @@
         <span class="visible-xs-inline-block" style="margin-top:7px;">
             {{post.pub_time|date:"Y-m-d"}}
         </span>
-        <div class="post-tags">
+        <div class="post-tags" >
             {% for tag in post.get_tags%}
             <a href="/tag/{{tag}}/">
                 <span class="label label-vmaig-{{forloop.counter}} btn">{{tag}}</span>
             </a>
             {% endfor %}
         </div>
+{#        <div id="tagclouddiv1" class="tagclouddiv1">#}
+{#            {% for tag in post.get_tags%}#}
+{#            <a href="/tag/{{tag}}/">{{ tag }}#}
+{#                <span class="label label-vmaig-{{forloop.counter}} btn">{{tag}}</span>#}
+{#            </a>#}
+{#            {% endfor %}#}
+{#        </div>#}
     </div>
     <div class="post-content ">
         <div class="row">
