--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,9 +6,7 @@
         <!-- 警告框 -->
         <div class="well alert hidden-xs fade in">
             <button class="close" data-dismiss="alert" type="button">&times;</button>
-            欢迎来到
-            <a href="http://vmaig.com" target="_blank">Vmaig</a>
-            ,如果有任何问题可以加QQ：994171686。
+             梧桐树，三更雨，不道离情正苦。一叶叶，一声声，空阶滴到明。-- 温庭筠
         </div>
 
         <div class="visible-xs">
