--- a/blog/templates/blog/widgets/links.html
+++ b/blog/templates/blog/widgets/links.html
@@ -9,9 +9,13 @@
             </h3>
         </div>
         <div id="links" class="padding10 list-group collapse in">
-            <a title="xxx" target="_blank" href="http://xxx.com" class="btn btn-vmaig btn-xs margin2">xxx网站</a>
-            <a title="yyy" target="_blank" href="http://yyy.com" class="btn btn-success btn-xs margin2">yyy网站</a>
-            <a title="zzz" target="_blank" href="http://zzz.com" class="btn btn-info btn-xs margin2">xxx网站</a>
+            {% for link in links %}
+                {%   if forloop.counter|divisibleby:"2"  %}
+                    <a title="{{link.title}}" target="_blank" href="{{ link.url }}" class="btn btn-success btn-xs margin2">{{link.title}}</a>
+                {% else %}
+                    <a title="{{link.title}}" target="_blank" href="{{ link.url }}" class="btn btn-info btn-xs margin2">{{link.title}}</a>
+                {% endif %}
+            {% endfor %}
         </div>
     </div>
 </div>
