--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/static/css/vmaig_auth.css">
     <link rel="stylesheet" href="/static/jquery/jquery.Jcrop.min.css">
 
+    <link rel="stylesheet" href="/static/css/github.css">
+
     <script src="/static/jquery/jquery-2.1.3.min.js"></script>
     <script src="/static/jquery/jquery.cookie.js"></script>
     <script src="/static/jquery/jquery.form.js"></script>
@@ -21,25 +23,38 @@
 
     {% block css%} {% endblock%}
 </head>
-<body id="vmaig">
+<div id="vmaig">
     <!-- 导航栏 -->
     {% include "./blog/include/nav.html"%}
     <!-- 文章列表 与 侧边的东西 -->
+{#    add#}
     <div id="vmaig-main">
         <div id="vmaig-content" class="container">
             {%block main%} {% endblock %}
         </div>
         <footer>
-           <div class="container">
-               <p class="text-center">基于Dajngo1.8,Bootsratp3,nginx,uwsgi,mysql</p>
-           </div>
+{#            <div id="footer">#}
+{#                <div class="x-footer uk-container x-container">#}
+{#                    <hr>#}
+{#                    <div class="uk-grid">#}
+{#                        <div class="uk-width-small-1-2 uk-width-medium-1-3 x-hidden-tiny">#}
+{#                            <a href="#" target="_blank" class="uk-icon-button uk-icon-github" data-uk-tooltip title="View source code on GitHub"></a>#}
+
+                       <div class="container">
+                           <p class="text-center">基于Dajngo1.8,Bootsratp3,nginx,uwsgi,mysql &nbsp; &nbsp;&nbsp; <a href="https://github.com/Gooooodman" target="_blank" class="uk-icon-button uk-icon-github" data-uk-tooltip title="View source code on GitHub"></a></p>
+
+                       </div>
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
         </footer>
     </div>
-
+</div>
 </body>
 
 
 <script type="text/javascript" src="/static/js/vmaig.js"></script>
 {% block js%}{% endblock%}
+
 
 </html>
