--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!--手机html -->
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-    <title>G5od</title>
+    <title>Goooood</title>
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/img/5.ico"/>
     <link rel="bookmark" href="/static/img/5.ico"/>
