--- a/blog/templates/blog/include/nav.html
+++ b/blog/templates/blog/include/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div class="navbar-brand">G5od</div>
+            <div class="navbar-brand">Goooood</div>
         </div>
         <div class="collapse navbar-collapse" id="vmaig-navbar-collapse">
             <ul class="nav navbar-nav">
