--- a/blog/templates/blog/widgets/tags_cloud.html
+++ b/blog/templates/blog/widgets/tags_cloud.html
@@ -49,7 +49,7 @@
 
     //在tags数组中存放blog的tags,用于在标签云中显示
     //var tags = [ "反汇编","OllyDbg","PE","ASM","Django","Python","Java","Bootstrap","Gentoo","linux","Shell","加密与解密","逆向","爬虫",];
-    var tags = [ "Shell","Python","Django","Life","Linux","Other"];
+    var tags = [ "Shell","Python","Django","Life","Linux","Other","Go"];
     var words = tags.concat(tags).concat(tags);
 
     d3.layout.cloud().size([250, 250])
